--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,55 +1,76 @@
 # 2024-04-23
 
-共 277 条
+共 298 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 16:00:41 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 17:01:10 GMT+0800 (China Standard Time) -->
 1. [村支书回应种地先交钱：县里让收的](https://so.toutiao.com/search?keyword=村支书回应种地先交钱：县里让收的)
-1. [主播“小团团”或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播“小团团”或面临3至5年刑期)
+1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
 1. [人民海军成立75周年](https://so.toutiao.com/search?keyword=人民海军成立75周年)
 1. [内蒙古通报干部下田拦春耕](https://so.toutiao.com/search?keyword=内蒙古通报干部下田拦春耕)
-1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
-1. [女孩体考完身体不适 家长：学业繁重](https://so.toutiao.com/search?keyword=女孩体考完身体不适+家长：学业繁重)
-1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
+1. [主播“小团团”或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播“小团团”或面临3至5年刑期)
+1. [360公司楼下开“车展”](https://so.toutiao.com/search?keyword=360公司楼下开“车展”)
+1. [律师：镇政府干预土地承包严重违法](https://so.toutiao.com/search?keyword=律师：镇政府干预土地承包严重违法)
+1. [理想MEGA遭水军攻击 小鹏中层配合调查](https://so.toutiao.com/search?keyword=理想MEGA遭水军攻击+小鹏中层配合调查)
+1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
+1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
+1. [日元持续贬值 中国能抗住金融战吗](https://so.toutiao.com/search?keyword=日元持续贬值+中国能抗住金融战吗)
+1. [中欧基金辟谣知名基金经理葛兰被抓](https://so.toutiao.com/search?keyword=中欧基金辟谣知名基金经理葛兰被抓)
+1. [央媒：以消防为由禁挂床帘说不通](https://so.toutiao.com/search?keyword=央媒：以消防为由禁挂床帘说不通)
 1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
+1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
+1. [9岁男孩坠亡：生前被老师打手心8次](https://so.toutiao.com/search?keyword=9岁男孩坠亡：生前被老师打手心8次)
+1. [女孩体考完身体不适 家长：学业繁重](https://so.toutiao.com/search?keyword=女孩体考完身体不适+家长：学业繁重)
+1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
+1. [湖人系列赛0-2落后时翻盘率仅9.1%](https://so.toutiao.com/search?keyword=湖人系列赛0-2落后时翻盘率仅9.1%)
+1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
 1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
+1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
+1. [女生为逃避同学霸凌捡玻璃片割喉](https://so.toutiao.com/search?keyword=女生为逃避同学霸凌捡玻璃片割喉)
+1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
+1. [中学物理老师“花式”教学走红网络](https://so.toutiao.com/search?keyword=中学物理老师“花式”教学走红网络)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
+1. [杨幂秦昊新剧首播收视率破0.3](https://so.toutiao.com/search?keyword=杨幂秦昊新剧首播收视率破0.3)
+1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
+1. [美菲“肩并肩”军演将首次涉足南海](https://so.toutiao.com/search?keyword=美菲“肩并肩”军演将首次涉足南海)
+1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
+1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
+1. [家长堵住男孩教唆自己孩子动手打人](https://so.toutiao.com/search?keyword=家长堵住男孩教唆自己孩子动手打人)
 1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
+1. [俄媒：俄乌冲突或于五月迎来新升级](https://so.toutiao.com/search?keyword=俄媒：俄乌冲突或于五月迎来新升级)
+1. [央媒评母子被同学家长殴打](https://so.toutiao.com/search?keyword=央媒评母子被同学家长殴打)
+1. [各国军官呼吁南海周边国家保持沟通](https://so.toutiao.com/search?keyword=各国军官呼吁南海周边国家保持沟通)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
+1. [杨鸣：深圳男篮回到主场肯定要玩命](https://so.toutiao.com/search?keyword=杨鸣：深圳男篮回到主场肯定要玩命)
+1. [官方回应高速不按规定保持车距被罚](https://so.toutiao.com/search?keyword=官方回应高速不按规定保持车距被罚)
+1. [华为鸿蒙智行今年销量中国新势力第一](https://so.toutiao.com/search?keyword=华为鸿蒙智行今年销量中国新势力第一)
+1. [游客景区偷拔19根竹笋遭索罚2600元](https://so.toutiao.com/search?keyword=游客景区偷拔19根竹笋遭索罚2600元)
+1. [评论员：床帘守护的是大学生的隐私](https://so.toutiao.com/search?keyword=评论员：床帘守护的是大学生的隐私)
+1. [收评：沪指缩量调整跌0.74%](https://so.toutiao.com/search?keyword=收评：沪指缩量调整跌0.74%)
+1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
+1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
+1. [广东九江大桥沉船事故初查原因](https://so.toutiao.com/search?keyword=广东九江大桥沉船事故初查原因)
+1. [日民众发起诉讼要求停止核污水排海](https://so.toutiao.com/search?keyword=日民众发起诉讼要求停止核污水排海)
 1. [胖东来辟谣将在登封开店](https://so.toutiao.com/search?keyword=胖东来辟谣将在登封开店)
 1. [百万网红被曝北电艺考作弊](https://so.toutiao.com/search?keyword=百万网红被曝北电艺考作弊)
-1. [家长堵住男孩教唆自己孩子动手打人](https://so.toutiao.com/search?keyword=家长堵住男孩教唆自己孩子动手打人)
-1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
-1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
 1. [高校禁挂床帘真能解决问题吗](https://so.toutiao.com/search?keyword=高校禁挂床帘真能解决问题吗)
 1. [马来西亚两架直升机相撞坠毁致10死](https://so.toutiao.com/search?keyword=马来西亚两架直升机相撞坠毁致10死)
-1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
 1. [穆雷压哨绝杀湖人](https://so.toutiao.com/search?keyword=穆雷压哨绝杀湖人)
-1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
-1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
-1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
 1. [男子康师傅方便面里吃出铁钉](https://so.toutiao.com/search?keyword=男子康师傅方便面里吃出铁钉)
 1. [黄金白银下挫 A股黄金股集体盘整](https://so.toutiao.com/search?keyword=黄金白银下挫+A股黄金股集体盘整)
-1. [各国军官呼吁南海周边国家保持沟通](https://so.toutiao.com/search?keyword=各国军官呼吁南海周边国家保持沟通)
 1. [英公司：美针对伊朗只会停留在纸面](https://so.toutiao.com/search?keyword=英公司：美针对伊朗只会停留在纸面)
-1. [俄媒：俄乌冲突或于五月迎来新升级](https://so.toutiao.com/search?keyword=俄媒：俄乌冲突或于五月迎来新升级)
 1. [女生质疑体考被压表大闹考场](https://so.toutiao.com/search?keyword=女生质疑体考被压表大闹考场)
-1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [俄军精准打击乌电视塔](https://so.toutiao.com/search?keyword=俄军精准打击乌电视塔)
 1. [美国多所大学爆发支持巴勒斯坦抗议](https://so.toutiao.com/search?keyword=美国多所大学爆发支持巴勒斯坦抗议)
-1. [央媒：以消防为由禁挂床帘说不通](https://so.toutiao.com/search?keyword=央媒：以消防为由禁挂床帘说不通)
-1. [游客景区偷拔19根竹笋遭索罚2600元](https://so.toutiao.com/search?keyword=游客景区偷拔19根竹笋遭索罚2600元)
 1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
-1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
 1. [专家：平衡外交已成韩国“刚需”](https://so.toutiao.com/search?keyword=专家：平衡外交已成韩国“刚需”)
-1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
-1. [官方回应高速不按规定保持车距被罚](https://so.toutiao.com/search?keyword=官方回应高速不按规定保持车距被罚)
 1. [专家建议毕业生第一年工资由政府发](https://so.toutiao.com/search?keyword=专家建议毕业生第一年工资由政府发)
-1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
 1. [斗鱼回应“PDD已停播超5个月”](https://so.toutiao.com/search?keyword=斗鱼回应“PDD已停播超5个月”)
 1. [台湾东岸彻夜发生80多次地震](https://so.toutiao.com/search?keyword=台湾东岸彻夜发生80多次地震)
 1. [孕妇坠崖案当事人5年后重返事发地](https://so.toutiao.com/search?keyword=孕妇坠崖案当事人5年后重返事发地)
-1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
-1. [杨幂秦昊新剧首播收视率破0.3](https://so.toutiao.com/search?keyword=杨幂秦昊新剧首播收视率破0.3)
 1. [本轮巴以冲突已致加沙34151人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已致加沙34151人死亡)
 1. [台媒：美国有意搅乱台海 居心叵测](https://so.toutiao.com/search?keyword=台媒：美国有意搅乱台海+居心叵测)
 1. [布林肯中国行将到访北京上海两地](https://so.toutiao.com/search?keyword=布林肯中国行将到访北京上海两地)
