--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,70 +1,83 @@
 # 2024-04-23
 
-共 333 条
+共 344 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 19:01:02 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 20:10:37 GMT+0800 (China Standard Time) -->
 1. [失踪多日南充女教师已找到](https://so.toutiao.com/search?keyword=失踪多日南充女教师已找到)
-1. [主播小团团或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播小团团或面临3至5年刑期)
-1. [新时代阅读的“N”种打开方式](https://so.toutiao.com/search?keyword=新时代阅读的“N”种打开方式)
 1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
+1. [新时代阅读的“N”种打开方式](https://so.toutiao.com/search?keyword=新时代阅读的“N”种打开方式)
 1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
+1. [主播小团团或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播小团团或面临3至5年刑期)
 1. [干部阻挠农民种地让交钱被免职](https://so.toutiao.com/search?keyword=干部阻挠农民种地让交钱被免职)
-1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
 1. [律师：镇政府干预土地承包严重违法](https://so.toutiao.com/search?keyword=律师：镇政府干预土地承包严重违法)
-1. [央媒评禁止大学生宿舍挂床帘](https://so.toutiao.com/search?keyword=央媒评禁止大学生宿舍挂床帘)
-1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
-1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
-1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
-1. [中欧基金辟谣知名基金经理葛兰被抓](https://so.toutiao.com/search?keyword=中欧基金辟谣知名基金经理葛兰被抓)
-1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
-1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
-1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
-1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
-1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
 1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
-1. [中学物理老师“花式”教学走红网络](https://so.toutiao.com/search?keyword=中学物理老师“花式”教学走红网络)
+1. [广东辟谣绥江河原水水源不足](https://so.toutiao.com/search?keyword=广东辟谣绥江河原水水源不足)
+1. [常州副市长抖音评论区成许愿池](https://so.toutiao.com/search?keyword=常州副市长抖音评论区成许愿池)
+1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
+1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
+1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
+1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
+1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
+1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
+1. [男子赶海徒手抓到大活鱼回家就做了](https://so.toutiao.com/search?keyword=男子赶海徒手抓到大活鱼回家就做了)
+1. [深圳暴雨街道被淹](https://so.toutiao.com/search?keyword=深圳暴雨街道被淹)
+1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
 1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
-1. [日元持续贬值 中国能抗住金融战吗](https://so.toutiao.com/search?keyword=日元持续贬值+中国能抗住金融战吗)
-1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
-1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
-1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
-1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
-1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
-1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [周鸿祎吐槽库里南性价比低](https://so.toutiao.com/search?keyword=周鸿祎吐槽库里南性价比低)
+1. [央媒评禁止大学生宿舍挂床帘](https://so.toutiao.com/search?keyword=央媒评禁止大学生宿舍挂床帘)
+1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
+1. [央媒：学生家长殴打母子通报避重就轻](https://so.toutiao.com/search?keyword=央媒：学生家长殴打母子通报避重就轻)
+1. [我们为什么要读书](https://so.toutiao.com/search?keyword=我们为什么要读书)
+1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
 1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
+1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
+1. [女儿遭霸凌殴打割喉求生 家长发声](https://so.toutiao.com/search?keyword=女儿遭霸凌殴打割喉求生+家长发声)
+1. [9岁男孩坠亡：生前被老师打手心8次](https://so.toutiao.com/search?keyword=9岁男孩坠亡：生前被老师打手心8次)
+1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
+1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
+1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
+1. [男童头朝下被马拖行 涉事景区暂停营业](https://so.toutiao.com/search?keyword=男童头朝下被马拖行+涉事景区暂停营业)
+1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
+1. [干部拦春耕称上边让我敛钱我就敛钱](https://so.toutiao.com/search?keyword=干部拦春耕称上边让我敛钱我就敛钱)
+1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
+1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
+1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
+1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
+1. [试驾2024款丰田赛那](https://so.toutiao.com/search?keyword=试驾2024款丰田赛那)
+1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
+1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
+1. [萌娃手指卡不锈钢筒孔消防成功解救](https://so.toutiao.com/search?keyword=萌娃手指卡不锈钢筒孔消防成功解救)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
+1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
+1. [凤凰传奇演唱会消防小哥随音乐摇摆](https://so.toutiao.com/search?keyword=凤凰传奇演唱会消防小哥随音乐摇摆)
+1. [中欧基金辟谣知名基金经理葛兰被抓](https://so.toutiao.com/search?keyword=中欧基金辟谣知名基金经理葛兰被抓)
+1. [中学物理老师“花式”教学走红网络](https://so.toutiao.com/search?keyword=中学物理老师“花式”教学走红网络)
+1. [日元持续贬值 中国能抗住金融战吗](https://so.toutiao.com/search?keyword=日元持续贬值+中国能抗住金融战吗)
 1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
 1. [王思雨晒WCBA总冠军奖杯照](https://so.toutiao.com/search?keyword=王思雨晒WCBA总冠军奖杯照)
 1. [一季度经济超预期为啥普通人感受不到](https://so.toutiao.com/search?keyword=一季度经济超预期为啥普通人感受不到)
-1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
 1. [马来西亚总理对直升机事故表示哀悼](https://so.toutiao.com/search?keyword=马来西亚总理对直升机事故表示哀悼)
-1. [9岁男孩坠亡：生前被老师打手心8次](https://so.toutiao.com/search?keyword=9岁男孩坠亡：生前被老师打手心8次)
-1. [央媒：学生家长殴打母子通报避重就轻](https://so.toutiao.com/search?keyword=央媒：学生家长殴打母子通报避重就轻)
 1. [大熊猫渝可渝爱扑倒奶妈](https://so.toutiao.com/search?keyword=大熊猫渝可渝爱扑倒奶妈)
-1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
 1. [日元对美元汇率再创1990年以来新低](https://so.toutiao.com/search?keyword=日元对美元汇率再创1990年以来新低)
-1. [深圳暴雨街道被淹](https://so.toutiao.com/search?keyword=深圳暴雨街道被淹)
 1. [女生质疑体考被压表大闹考场](https://so.toutiao.com/search?keyword=女生质疑体考被压表大闹考场)
 1. [考虑如何应对美301调查？中方回应](https://so.toutiao.com/search?keyword=考虑如何应对美301调查？中方回应)
-1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
-1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
 1. [直击王婆江西说媒第二站婺女洲](https://so.toutiao.com/search?keyword=直击王婆江西说媒第二站婺女洲)
 1. [乌总统称美援乌导弹协议细节已达成](https://so.toutiao.com/search?keyword=乌总统称美援乌导弹协议细节已达成)
-1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [张康阳准备300万欧夺冠奖金](https://so.toutiao.com/search?keyword=张康阳准备300万欧夺冠奖金)
 1. [中国海军举办西太论坛有何特殊意义](https://so.toutiao.com/search?keyword=中国海军举办西太论坛有何特殊意义)
 1. [山西致26死煤矿火灾事故调查报告公布](https://so.toutiao.com/search?keyword=山西致26死煤矿火灾事故调查报告公布)
 1. [村支书回应种地先交钱：县里让收的](https://so.toutiao.com/search?keyword=村支书回应种地先交钱：县里让收的)
 1. [内蒙古通报干部下田拦春耕](https://so.toutiao.com/search?keyword=内蒙古通报干部下田拦春耕)
 1. [主播“小团团”或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播“小团团”或面临3至5年刑期)
-1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
 1. [家长堵住男孩教唆自己孩子动手打人](https://so.toutiao.com/search?keyword=家长堵住男孩教唆自己孩子动手打人)
 1. [俄媒：俄乌冲突或于五月迎来新升级](https://so.toutiao.com/search?keyword=俄媒：俄乌冲突或于五月迎来新升级)
 1. [媒体：印度开启一场几无悬念的大选](https://so.toutiao.com/search?keyword=媒体：印度开启一场几无悬念的大选)
 1. [律师解读小团团被捕事件](https://so.toutiao.com/search?keyword=律师解读小团团被捕事件)
 1. [余承东：鸿蒙智行今年已卖10.5万辆](https://so.toutiao.com/search?keyword=余承东：鸿蒙智行今年已卖10.5万辆)
-1. [男童头朝下被马拖行 涉事景区暂停营业](https://so.toutiao.com/search?keyword=男童头朝下被马拖行+涉事景区暂停营业)
 1. [杭州公安回应周杰伦在演唱会的感谢](https://so.toutiao.com/search?keyword=杭州公安回应周杰伦在演唱会的感谢)
 1. [张康阳分享国米夺意甲第20冠后心情](https://so.toutiao.com/search?keyword=张康阳分享国米夺意甲第20冠后心情)
 1. [掘金两战三分命中率仅30.3%](https://so.toutiao.com/search?keyword=掘金两战三分命中率仅30.3%)
@@ -119,7 +132,6 @@
 1. [景区回应猴子被摸屁股咬伤游客](https://so.toutiao.com/search?keyword=景区回应猴子被摸屁股咬伤游客)
 1. [学校禁止学生挂床帘是权力越界吗](https://so.toutiao.com/search?keyword=学校禁止学生挂床帘是权力越界吗)
 1. [中方谈布林肯访华 聚焦五大目标](https://so.toutiao.com/search?keyword=中方谈布林肯访华+聚焦五大目标)
-1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
 1. [蔡磊说在我倒下之前干掉渐冻症](https://so.toutiao.com/search?keyword=蔡磊说在我倒下之前干掉渐冻症)
 1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
 1. [烟台舰在家乡举行升国旗仪式](https://so.toutiao.com/search?keyword=烟台舰在家乡举行升国旗仪式)
@@ -157,7 +169,6 @@
 1. [美将制裁以军部队 以官员：美疯了](https://so.toutiao.com/search?keyword=美将制裁以军部队+以官员：美疯了)
 1. [珠江流域北江沿江树木道路被淹](https://so.toutiao.com/search?keyword=珠江流域北江沿江树木道路被淹)
 1. [赖清德让3名陈水扁幕僚加入其团队](https://so.toutiao.com/search?keyword=赖清德让3名陈水扁幕僚加入其团队)
-1. [干部拦春耕称上边让我敛钱我就敛钱](https://so.toutiao.com/search?keyword=干部拦春耕称上边让我敛钱我就敛钱)
 1. [辽宁男篮距半决赛仅“一步之遥”](https://so.toutiao.com/search?keyword=辽宁男篮距半决赛仅“一步之遥”)
 1. [航拍北江、西江洪水交汇佛山三水](https://so.toutiao.com/search?keyword=航拍北江、西江洪水交汇佛山三水)
 1. [空袭伊朗能缓解以色列的多重困境吗](https://so.toutiao.com/search?keyword=空袭伊朗能缓解以色列的多重困境吗)
