--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,57 +1,71 @@
 # 2024-04-23
 
-共 344 条
+共 355 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 20:10:37 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 21:05:10 GMT+0800 (China Standard Time) -->
 1. [失踪多日南充女教师已找到](https://so.toutiao.com/search?keyword=失踪多日南充女教师已找到)
-1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
-1. [新时代阅读的“N”种打开方式](https://so.toutiao.com/search?keyword=新时代阅读的“N”种打开方式)
 1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
-1. [主播小团团或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播小团团或面临3至5年刑期)
+1. [这些家乡舰“回家”了](https://so.toutiao.com/search?keyword=这些家乡舰“回家”了)
+1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
+1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
 1. [干部阻挠农民种地让交钱被免职](https://so.toutiao.com/search?keyword=干部阻挠农民种地让交钱被免职)
 1. [律师：镇政府干预土地承包严重违法](https://so.toutiao.com/search?keyword=律师：镇政府干预土地承包严重违法)
-1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
-1. [广东辟谣绥江河原水水源不足](https://so.toutiao.com/search?keyword=广东辟谣绥江河原水水源不足)
-1. [常州副市长抖音评论区成许愿池](https://so.toutiao.com/search?keyword=常州副市长抖音评论区成许愿池)
-1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
-1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
+1. [深圳龙华城管回应“暴雨天浇花”](https://so.toutiao.com/search?keyword=深圳龙华城管回应“暴雨天浇花”)
 1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
-1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [央媒：禁止宿舍挂床帘有懒政之嫌](https://so.toutiao.com/search?keyword=央媒：禁止宿舍挂床帘有懒政之嫌)
 1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
-1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
-1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
-1. [男子赶海徒手抓到大活鱼回家就做了](https://so.toutiao.com/search?keyword=男子赶海徒手抓到大活鱼回家就做了)
+1. [广东辟谣绥江河原水水源不足](https://so.toutiao.com/search?keyword=广东辟谣绥江河原水水源不足)
+1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
+1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [主播小团团或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播小团团或面临3至5年刑期)
 1. [深圳暴雨街道被淹](https://so.toutiao.com/search?keyword=深圳暴雨街道被淹)
-1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
-1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
-1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
-1. [周鸿祎吐槽库里南性价比低](https://so.toutiao.com/search?keyword=周鸿祎吐槽库里南性价比低)
-1. [央媒评禁止大学生宿舍挂床帘](https://so.toutiao.com/search?keyword=央媒评禁止大学生宿舍挂床帘)
-1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
-1. [央媒：学生家长殴打母子通报避重就轻](https://so.toutiao.com/search?keyword=央媒：学生家长殴打母子通报避重就轻)
-1. [我们为什么要读书](https://so.toutiao.com/search?keyword=我们为什么要读书)
-1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
-1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
 1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
+1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
+1. [周鸿祎吐槽库里南性价比低](https://so.toutiao.com/search?keyword=周鸿祎吐槽库里南性价比低)
+1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
+1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
+1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
+1. [黄金两日重挫近4%](https://so.toutiao.com/search?keyword=黄金两日重挫近4%)
+1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
+1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
+1. [大四男生每天花4小时读纸质书](https://so.toutiao.com/search?keyword=大四男生每天花4小时读纸质书)
+1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
+1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
+1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
+1. [试驾2024款丰田赛那](https://so.toutiao.com/search?keyword=试驾2024款丰田赛那)
+1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
+1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
+1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
+1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
+1. [美国格斗选手徒手制服2米长鳄鱼](https://so.toutiao.com/search?keyword=美国格斗选手徒手制服2米长鳄鱼)
+1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
+1. [唐山舰厦门舰首次在命名城市靠泊开放](https://so.toutiao.com/search?keyword=唐山舰厦门舰首次在命名城市靠泊开放)
+1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
+1. [我们为什么要读书](https://so.toutiao.com/search?keyword=我们为什么要读书)
+1. [毛豆小朋友收到北海舰队的暖心礼物](https://so.toutiao.com/search?keyword=毛豆小朋友收到北海舰队的暖心礼物)
+1. [以色列高层或现“辞职潮”](https://so.toutiao.com/search?keyword=以色列高层或现“辞职潮”)
+1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
+1. [美国将派60名军事顾问进入乌克兰](https://so.toutiao.com/search?keyword=美国将派60名军事顾问进入乌克兰)
+1. [媒体评高校禁止学生宿舍悬挂床帘](https://so.toutiao.com/search?keyword=媒体评高校禁止学生宿舍悬挂床帘)
+1. [烟台舰在家乡举行升国旗仪式](https://so.toutiao.com/search?keyword=烟台舰在家乡举行升国旗仪式)
+1. [穆雷末节8中6射落14分](https://so.toutiao.com/search?keyword=穆雷末节8中6射落14分)
+1. [新时代阅读的“N”种打开方式](https://so.toutiao.com/search?keyword=新时代阅读的“N”种打开方式)
+1. [常州副市长抖音评论区成许愿池](https://so.toutiao.com/search?keyword=常州副市长抖音评论区成许愿池)
+1. [男子赶海徒手抓到大活鱼回家就做了](https://so.toutiao.com/search?keyword=男子赶海徒手抓到大活鱼回家就做了)
+1. [央媒评禁止大学生宿舍挂床帘](https://so.toutiao.com/search?keyword=央媒评禁止大学生宿舍挂床帘)
+1. [央媒：学生家长殴打母子通报避重就轻](https://so.toutiao.com/search?keyword=央媒：学生家长殴打母子通报避重就轻)
 1. [女儿遭霸凌殴打割喉求生 家长发声](https://so.toutiao.com/search?keyword=女儿遭霸凌殴打割喉求生+家长发声)
 1. [9岁男孩坠亡：生前被老师打手心8次](https://so.toutiao.com/search?keyword=9岁男孩坠亡：生前被老师打手心8次)
-1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
 1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
-1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
 1. [男童头朝下被马拖行 涉事景区暂停营业](https://so.toutiao.com/search?keyword=男童头朝下被马拖行+涉事景区暂停营业)
-1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
 1. [干部拦春耕称上边让我敛钱我就敛钱](https://so.toutiao.com/search?keyword=干部拦春耕称上边让我敛钱我就敛钱)
-1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
-1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
-1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
-1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
-1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
-1. [试驾2024款丰田赛那](https://so.toutiao.com/search?keyword=试驾2024款丰田赛那)
-1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
 1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
 1. [萌娃手指卡不锈钢筒孔消防成功解救](https://so.toutiao.com/search?keyword=萌娃手指卡不锈钢筒孔消防成功解救)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
 1. [凤凰传奇演唱会消防小哥随音乐摇摆](https://so.toutiao.com/search?keyword=凤凰传奇演唱会消防小哥随音乐摇摆)
 1. [中欧基金辟谣知名基金经理葛兰被抓](https://so.toutiao.com/search?keyword=中欧基金辟谣知名基金经理葛兰被抓)
@@ -114,7 +128,6 @@
 1. [英公司：美针对伊朗只会停留在纸面](https://so.toutiao.com/search?keyword=英公司：美针对伊朗只会停留在纸面)
 1. [俄军精准打击乌电视塔](https://so.toutiao.com/search?keyword=俄军精准打击乌电视塔)
 1. [美国多所大学爆发支持巴勒斯坦抗议](https://so.toutiao.com/search?keyword=美国多所大学爆发支持巴勒斯坦抗议)
-1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
 1. [专家：平衡外交已成韩国“刚需”](https://so.toutiao.com/search?keyword=专家：平衡外交已成韩国“刚需”)
 1. [专家建议毕业生第一年工资由政府发](https://so.toutiao.com/search?keyword=专家建议毕业生第一年工资由政府发)
 1. [斗鱼回应“PDD已停播超5个月”](https://so.toutiao.com/search?keyword=斗鱼回应“PDD已停播超5个月”)
@@ -134,7 +147,6 @@
 1. [中方谈布林肯访华 聚焦五大目标](https://so.toutiao.com/search?keyword=中方谈布林肯访华+聚焦五大目标)
 1. [蔡磊说在我倒下之前干掉渐冻症](https://so.toutiao.com/search?keyword=蔡磊说在我倒下之前干掉渐冻症)
 1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
-1. [烟台舰在家乡举行升国旗仪式](https://so.toutiao.com/search?keyword=烟台舰在家乡举行升国旗仪式)
 1. [曝蔚来“截胡”小米SU7](https://so.toutiao.com/search?keyword=曝蔚来“截胡”小米SU7)
 1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
 1. [24日夜间起华南地区雨势将再加强](https://so.toutiao.com/search?keyword=24日夜间起华南地区雨势将再加强)
@@ -159,7 +171,6 @@
 1. [美将制裁以军部队？以方各派猛批](https://so.toutiao.com/search?keyword=美将制裁以军部队？以方各派猛批)
 1. [奶爸建议不要带6岁以下孩子旅行](https://so.toutiao.com/search?keyword=奶爸建议不要带6岁以下孩子旅行)
 1. [医院发生跳楼事件 院方需担责吗](https://so.toutiao.com/search?keyword=医院发生跳楼事件+院方需担责吗)
-1. [美国将派60名军事顾问进入乌克兰](https://so.toutiao.com/search?keyword=美国将派60名军事顾问进入乌克兰)
 1. [市委原书记被骗500万元背后](https://so.toutiao.com/search?keyword=市委原书记被骗500万元背后)
 1. [湖南汨罗发生命案致2死2伤](https://so.toutiao.com/search?keyword=湖南汨罗发生命案致2死2伤)
 1. [薛之谦演唱会一个人来的女主发声](https://so.toutiao.com/search?keyword=薛之谦演唱会一个人来的女主发声)
